fix: mail.svg favicon spacing

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -508,7 +508,7 @@ img.favicon {
   }
 
   &[src$="mail.svg"] {
-    margin-left: 0.1rem;
+    margin-left: 0.05rem;
   }
 
   &[src$="forum_effectivealtruism_org.avif"] {
